' Generated by UML Generator
' Encoded: VLDDJuD04BtpA-O8MXBFf3OrCOqcDZ5fZGVZORgCi14MiZkrOjF_xYvVRQ5wWLrctfitRuQvOTIypJFFV4fLeiOSH8R6t35hkTaoFOf2hUGFmOsNofX0I2qoyhmw2zQQQ5sLjCYgLv99oh3t049JQiaKmQPYSdUsAH6iBALAt3sqZ-iHrZzD2rnAh77dVqSW5K-Wgjz115-5Z5qq8NPuF-Yf3oDTABZGLQDgRvjbAGuWKAIsq1BBQGESZ1kPmIqesi43cjGbploWLzuJEGKjy5nyD2Oy0tB1cBcmSUfjM-VI6xrDu-vKzITkQIyNE1exS6q2_m2FLdVczc8MXIRJ3lMZFaVm90rF7KbdqPtMMDLVJqt2E1wBE36ec-8VXPl1zHhloSX4FICpQLNhEPgPerG-wiHqx6_l8xubvPRkXMKs0DjDLNRpC1bAiz3X5XLXUC7sUc1N5qEjVHtEcvEAxS_s2m
' URL: http://www.plantuml.com/plantuml/uml/VLDDJuD04BtpA-O8MXBFf3OrCOqcDZ5fZGVZORgCi14MiZkrOjF_xYvVRQ5wWLrctfitRuQvOTIypJFFV4fLeiOSH8R6t35hkTaoFOf2hUGFmOsNofX0I2qoyhmw2zQQQ5sLjCYgLv99oh3t049JQiaKmQPYSdUsAH6iBALAt3sqZ-iHrZzD2rnAh77dVqSW5K-Wgjz115-5Z5qq8NPuF-Yf3oDTABZGLQDgRvjbAGuWKAIsq1BBQGESZ1kPmIqesi43cjGbploWLzuJEGKjy5nyD2Oy0tB1cBcmSUfjM-VI6xrDu-vKzITkQIyNE1exS6q2_m2FLdVczc8MXIRJ3lMZFaVm90rF7KbdqPtMMDLVJqt2E1wBE36ec-8VXPl1zHhloSX4FICpQLNhEPgPerG-wiHqx6_l8xubvPRkXMKs0DjDLNRpC1bAiz3X5XLXUC7sUc1N5qEjVHtEcvEAxS_s2m
' Generated on: 2026-01-28T15:22:25.201684788

@startuml
skinparam classAttributeIconSize 0
hide circle

class TreeTypeFlyWeight {
  -sprite: byte
  -type: String
  --
  +TreeTypeFlyWeight(type: String)
  +draw(x: int, y: int): void
  +getType(): String
}

class TreeTypeFactory {
  -{static} cache: Map<String, TreeTypeFlyWeight> = new HashMap<>()
  --
  +{static} getTreeType(type: String): TreeTypeFlyWeight
  +{static} totalTypes(): int
}

class Tree {
  -x: int
  -y: int
  -treeType: TreeTypeFlyWeight
  --
  +Tree(x: int, y: int, treeType: TreeTypeFlyWeight)
  +draw(): void
}

class Forest {
  -forest: List<Tree> = new ArrayList<>()
  --
  +add(x: int, y: int, t: String): void
  +draw(): void
}

class FactoryFlyWeightDesignPattern {
  +{static} main(args: String[]): void
}

class MemoryUtil {
  +{static} print(tag: String): void
}

TreeTypeFactory o-- TreeTypeFlyWeight
Tree *-- TreeTypeFlyWeight
Forest o-- Tree
@enduml